tests/semantic/fail/logical_and_bad_rhs.c
int main(void) {
  int i;
  struct S {int i;} s;
  if (s && i) {
     return 0;
  }
}
